feat(export): implement downloading the random chords to a text file
Created exporter.js to turn the generated chord tabs into a text file.
It turns the text contents of the <code> block into a plaintext blob and
creates a temporary URL for it.

This is wrapped into a function that runs only when the Download tabs
link is clicked.

--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -6,5 +6,7 @@
     <pre><code>
 {{ chords }}
     </code></pre>
+    <a id="download" download="practice_chords.txt" href="#">Download tabs</a>
   </main>
+  <script defer src="{{url_for('static', filename='js/exporter.js') }}"></script>
 {% endblock %}
