feat(flask): add support for customizing chord generation
Added a form for customizing how many chord sets are generated, as well
as how many chords are included in each set.

routes.py now detects if the POST method is being used and captures the
values submitted in the form, then passes them to generate_chords().

This change achieves feature parity with the CLI version of the program.

--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -3,9 +3,20 @@
 {% block content %}
   <main>
     <h2>Random Chord Set</h2>
-    <pre><code>
-{{ chords }}
-    </code></pre>
+    <details name="settings">
+      <summary>Customize</summary>
+      <form method="POST">
+        <label for="count">Count</label>
+        <input type="number" name="count" id="count" value="2" placeholder="2" min="1" max="8">
+        <label for="count">Sets</label>
+        <input type="number" name="sets" id="sets" value="3" placeholder="3" min="1" max="8">
+      
+        <button type="submit">Generate chords</button>
+      </form>
+    </details>
+
+    <!-- Generated server-side either with default or customized parameters.-->
+    <pre><code>{{ chords }}</code></pre>
     <a id="download" download="practice_chords.txt" href="#">Download tabs</a>
   </main>
   <script defer src="{{url_for('static', filename='js/exporter.js') }}"></script>
